# python-perf

./: README.md  pyproject.toml  timer.py
python-perf/: main.py  tests.py  timer.py
