[tool.poetry]
name = "python-perf"
version = "1.0"
description = "Performance tests for Python"
authors = ["Dennis Goldschmidt <dennis.goldschmidt@neuro.fchampalimaud.org>"]
license = "GNU v3.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
