[tool.poetry]
name = "python-perf"
version = "1.0"
description = "Performance tests for Python"
authors = ["Dennis Goldschmidt <dennis.goldschmidt@neuro.fchampalimaud.org>"]
license = "GNU v3.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
pytest = "^7.0.1"
hypothesis = "^6.39.3"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

